<resources>
    <string name="app_name">Foursquare</string>
    <string name="skip"><![CDATA[Skip >]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="or">OR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_have_sent_you_an_otp_please_enter_it_below">We have sent you an OTP. \n Please enter it below.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="get_in">Get in !</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="title_activity_otpactivity">OTPActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="full_name">Full Name</string>
    <string name="close" />
    <string name="open" />
    <string name="ImageView">TODO</string>
    <string name="add_review">Add Review</string>
    <string name="favourites">Favourites</string>
    <string name="about_us">About us</string>
    <string name="feedback">Feedback</string>
    <string name="write_your_feedback">Write your feedback</string>
    <string name="add_feedback">Add Feedback</string>
    <string name="ovarall_rating">Ovarall Rating</string>
    <string name="how_would_you_rate_your_experience">How would you rate your experience?</string>
    <string name="submitRating">Submit</string>
    <string name="near_me">Near Me</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="near_by_places">Near by places</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="sort_by">Sort by</string>
    <string name="filter_by">Filter by</string>
    <string name="set_radius">Set radius</string>
    <string name="accepts_credit_cards">Accepts credit cards</string>
    <string name="delivery">Delivery</string>
    <string name="dog_friendly">Dog friendly</string>
    <string name="family_friendly_places">Family friendly places</string>
    <string name="in_walk_distance">In walk distance</string>
    <string name="outdoor_seating">Outdoor seating</string>
    <string name="parking">Parking</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="coffee">Coffee</string>
    <string name="lunch">Lunch</string>
    <string name="popular">Popular</string>
    <string name="top_pick">Top Pick</string>
</resources>