<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".view.fragment.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/avenir_book"
            android:text="@string/full_name"
            android:textColor="@color/grey_white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_iv" />


        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/grey_white"
            android:fontFamily="@font/avenir_book"
            android:foregroundTint="@color/grey_white"
            android:inputType="textPersonName"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_iv"
            tools:text="Elavarasan" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/avenir_book"
            android:text="@string/email"
            android:textColor="@color/grey_white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_et" />


        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/grey_white"
            android:fontFamily="@font/avenir_book"
            android:foregroundTint="@color/grey_white"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_et"
            tools:text="elavarasan@gmail.com" />

        <TextView
            android:id="@+id/mobileNumber_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/avenir_book"
            android:text="@string/mobile_number"
            android:textColor="@color/grey_white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_et" />


        <EditText
            android:id="@+id/mobileNumber_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="40dp"
            android:maxLength="10"
            android:backgroundTint="@color/grey_white"
            android:fontFamily="@font/avenir_book"
            android:foregroundTint="@color/grey_white"
            android:inputType="number"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_et"
            tools:text="8270733016" />

        <TextView
            android:id="@+id/enterPassword_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/avenir_book"
            android:text="@string/password"
            android:textColor="@color/grey_white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileNumber_et" />


        <EditText
            android:id="@+id/enterPassword_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/grey_white"
            android:fontFamily="@font/avenir_book"
            android:foregroundTint="@color/grey_white"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileNumber_et"
            tools:text="Ela@1234" />

        <TextView
            android:id="@+id/confirmPassword_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/avenir_book"
            android:text="@string/confirm_password"
            android:textColor="@color/grey_white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterPassword_et" />


        <EditText
            android:id="@+id/confirmPassword_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/grey_white"
            android:fontFamily="@font/avenir_book"
            android:foregroundTint="@color/grey_white"
            android:inputType="textWebPassword"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterPassword_et"
            tools:text="Ela@1234" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/avenir_book"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>